chore: add jest

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,5 +10,6 @@
     "@typescript-eslint/no-misused-promises": "off",
     "@typescript-eslint/no-extraneous-class": "off",
     "@typescript-eslint/no-non-null-assertion": "off"
-  }
+  },
+  "ignorePatterns": ["*.config.ts"]
 }
