--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node-dev --files -r tsconfig-paths/register --inspect --ignore-watch node_modules src/index.ts",
-    "test": "jest --passWithNoTests --noStackTrace --runInBand --no-cache"
+    "test": "jest --passWithNoTests --noStackTrace --runInBand --no-cache",
+    "prepare": "husky"
   },
   "dependencies": {
     "express": "^4.17.3"
@@ -20,7 +21,9 @@
     "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.2",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
