--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "ts-node-dev --files -r tsconfig-paths/register --inspect --ignore-watch node_modules src/index.ts",
     "test": "jest --passWithNoTests --noStackTrace --runInBand --no-cache",
+    "check": "ncu --interactive --format group",
     "prepare": "husky"
   },
   "dependencies": {
@@ -24,6 +25,7 @@
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
+    "npm-check-updates": "^16.14.18",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
