chore: add pre push script to run tests

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit.config.ts",
     "test:integration": "npm test -- --watch -c jest-integration.config.ts",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:ci": "npm test -- --coverage",
+    "test:changed": "npm test -- --changedSince=origin/main",
     "check": "ncu --interactive --format group",
     "prepare": "husky"
   },
