chore: add mysql2

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mysql2": "^3.9.3"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
