--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:integration": "npm test -- --watch -c jest-integration.config.ts",
     "test:staged": "npm test -- --findRelatedTests",
     "test:coverage": "npm test -- --coverage",
-    "test:ci": "npm test -- --coverage --testPathIgnorePatterns ['<rootDir>/tests/infra']",
+    "test:ci": "npm test -- --coverage --testPathIgnorePatterns=tests/infra",
     "test:changed": "npm test -- --changedSince=origin/main",
     "check": "ncu --interactive --format group",
     "prepare": "husky"
