chore: remove infra from sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,4 +13,5 @@ sonar.ts.tscconfigpath=tsconfig.json
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
 sonar.coverage.exclusions=src/main/**
+sonar.coverage.exclusions=src/infra/**
 sonar.cpd.exclusions=src/main/docs/**
