--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "mysql2": "^3.9.3"
+    "mysql2": "^3.9.3",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.30",
+    "@types/validator": "^13.11.9",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
     "eslint": "^8.57.0",
