--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "mysql2": "^3.9.3",
+    "validation-br": "^1.4.5",
     "validator": "^13.11.0"
   },
   "devDependencies": {
