--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.30",
+    "@types/supertest": "^6.0.2",
     "@types/validator": "^13.11.9",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
@@ -40,6 +41,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "npm-check-updates": "^16.14.18",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
