--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "author": "João Victor Veidz",
   "license": "MIT",
   "scripts": {
+    "start": "node dist/main/server.js",
+    "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
+    "build": "rimraf dist && tsc -p tsconfig.build.json",
     "test": "jest --passWithNoTests --noStackTrace --runInBand --no-cache",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit.config.ts",
@@ -17,6 +20,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
+    "module-alias": "^2.2.3",
     "mysql2": "^3.9.3",
     "validation-br": "^1.4.5",
     "validator": "^13.11.0"
@@ -41,9 +45,13 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "npm-check-updates": "^16.14.18",
+    "rimraf": "^5.0.5",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
