--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   mysqldb:
+    container_name: wefit-challenge-mysqldb
     platform: linux/x86_64
     image: mysql:5.6
     restart: unless-stopped
@@ -10,6 +11,22 @@ services:
       - MYSQL_ROOT_PASSWORD=$MYSQLDB_PASSWORD
       - MYSQL_DATABASE=$MYSQLDB_DATABASE
     ports:
-      - $MYSQLDB_PORT:3306
+      - 3307:3307
     volumes:
       - ./data/:/var/lib/mysql
+      - ./scripts/setup-db.sql:/docker-entrypoint-initdb.d/1.sql
+  api:
+    container_name: wefit-challenge
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    environment:
+      - PORT=5000
+    volumes:
+      - ./dist:/usr/src/wefit-challenge/dist/
+      - ./package.json:/usr/src/wefit-challenge/package.json
+    ports:
+      - 5000:5000
+      - 9222:9222
+    links:
+      - mysqldb
