ci: change sonar coverage exclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,6 +12,5 @@ sonar.language=ts
 sonar.ts.tscconfigpath=tsconfig.json
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
-sonar.coverage.exclusions=src/main/**
-sonar.coverage.exclusions=src/infra/**
+sonar.coverage.exclusions=src/main/**,src/infra/**
 sonar.cpd.exclusions=src/main/docs/**
