chore: add swagger ui express

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "strictNullChecks": true,
     "skipLibCheck": true,
     "sourceMap": true,
+    "resolveJsonModule": true,
     "paths": {
       "@/tests/*": ["../tests/*"],
       "@/*": ["*"]
