--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.19.2",
     "module-alias": "^2.2.3",
     "mysql2": "^3.9.3",
+    "swagger-ui-express": "^5.0.0",
     "validation-br": "^1.4.5",
     "validator": "^13.11.0"
   },
@@ -33,6 +34,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.2",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-ui-express": "^4.1.6",
     "@types/validator": "^13.11.9",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
