--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
+    "nodemon": "^3.1.0",
     "npm-check-updates": "^16.14.18",
     "rimraf": "^5.0.5",
     "supertest": "^6.3.4",
