--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "_moduleAliases": {
     "@": "dist"
   }
