--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,11 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
+    env_file: ./.env
     environment:
+      - MYSQLDB_HOST=$MYSQLDB_HOST
+      - MYSQL_ROOT_PASSWORD=$MYSQLDB_PASSWORD
+      - MYSQL_DATABASE=$MYSQLDB_DATABASE
       - PORT=5000
     volumes:
       - ./dist:/usr/src/wefit-challenge/dist/
