--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,11 +2,14 @@ FROM node:20
 
 WORKDIR /usr/src/wefit-challenge
 
-COPY package*.json ./
+COPY package.json ./
+COPY yarn.lock ./
 
 RUN yarn install
 
 COPY . .
+
+RUN yarn run build
 
 EXPOSE 5000
 EXPOSE 9222
